/home/fox/release/dtrace/dtrace-20110404.tar.bz2

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Mon Apr  4 20:48:25 2011  fox
+
+     480* prov_common.c: Handle the BUG_ON instruction.
+
 Sun Apr  3 13:36:39 2011  fox
 
      479* Archive: 1.0119
