--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Tue Jun  7 22:00:51 2011  fox
+
+     506* systrace.c: Fix 32b syscalls on 64b kernels (forgot to finish
+          this off last night).
+
 Mon Jun  6 22:23:23 2011  fox
 
      505* Archive: 1.0122
