--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Fri Jul  8 09:19:49 2011  fox
+
+     532* prov_common.c: Provide common framework, similar to notifier.c
+          but more generic for more Solaris defined probes.
+
 Sat Jun 25 23:44:06 2011  fox
 
      531* notifier.c: New provider to intercept the notifier chains.
