--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Tue Jul 12 07:07:55 2011  fox
+
+     533* driver/prov_common.c: Avoid null ptr deref for some probes.
+
 Fri Jul  8 09:19:49 2011  fox
 
      532* prov_common.c: Provide common framework, similar to notifier.c
