--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Mon Oct 10 21:50:42 2011  fox
+
+     539* Fix last change to dtrace_isa.c to get the if/else/endif the
+          right way around. Thanks Nigel.
+
+     538* dtrace_isa.c: Fix for kernels >= 2.6.39, since the stacktrace_ops
+          have lost the .warning/.warning_symbol members.
+
 Fri Oct  7 19:53:05 2011  fox
 
      537* mkport.pl, ctfconvert/dwarf.c: Handle missing cplus_demangle()
