--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Tue Oct 11 23:49:58 2011  fox
+
+     540* cmd/ctfconvert/makefile: Fix bad linking for unused ctfdump
+          command.
+
 Mon Oct 10 21:50:42 2011  fox
 
      539* Fix last change to dtrace_isa.c to get the if/else/endif the
