--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+Mon Nov 21 22:25:54 2011  fox
+
+     585* driver/*: Remove some debug left behind. Some portability fixes.
+
+     584* tests/syscalls.c: Add more syscalls. Fix potential hang on
+          sigsuspend.
+
 Sun Nov 20 10:46:20 2011  fox
 
      583* systrace.c: Add syscall counting stats to /proc/dtrace/stats.
